maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:22: error: not found: value nbpas
    nbpas = nbPas - 1
    ^