maze.randommouse.RandomMouseMaze.scala.code
override def run() {

  while(!estSurBiscuit()) {
    
    randMove()
    
  }
  
  prendBiscuit()
  
}


def randMove() {
  
	var nbPas = random3()
  
  while (!estFaceMur() && nbPas != 0) {
    
    avance()
    nbpas = nbPas - 1
    
  }
    
  gauche()
    
  if (estFaceMur()) {
      
  	droite()
    droite()
      
  }
    
}
  